# quantum-error-analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  test.yml
src/: lib.rs
src/io/: json.rs  latex.rs  mod.rs  qasm.rs
src/physics/: circuit.rs  mod.rs  pauli.rs  propagation.rs  simulator.rs
tests/: e2e_tests.rs  integration_tests.rs  io_tests.rs  physics_validation.rs  verify_against_textbook_physics.rs
tests/test_data/: all_gates.json  all_gates.qasm  bell_state.json  bell_state.qasm  complex_circuit.json  complex_circuit.qasm  sample_circuit.json  sample_circuit.qasm
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: .gitignore  index.html  package.json  playwright.config.js  vite.config.js
web/scripts/: build-wasm.ps1  build-wasm.sh  check-prerequisites.ps1  check-prerequisites.sh
web/src/: main.js  state.js  styles.css  wasm-loader.js
web/src/components/: error-handler.js  gate-manager.js  simulator.js  time-scheduler.js
web/src/events/: circuit-handlers.js
web/src/rendering/: circuit-renderer.js  error-chart.js  error-renderer.js  gate-renderer.js
web/src/ui/: circuit-config.js  error-controls.js  gate-palette.js  import-export.js  simulation-controls.js
web/src/utils/: notifications.js
web/tests/e2e/: basic.spec.js  circuit-config.spec.js  circuit-creation.spec.js  complex-circuits.spec.js  error-handling.spec.js  error-injection.spec.js  error-management.spec.js  error-propagation.spec.js  gate-controls.spec.js  integration.spec.js  many-qubits.spec.js  physics-verification.spec.js  simulation-controls.spec.js  (+2 more)
