[package]
name = "quantum-error-analyzer-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for Quantum Error Analyzer"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
bitvec = { version = "1.0", features = ["serde"] }
quantum-error-analyzer = { path = ".." }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization

